# alarm

./: .gitignore  .pre-commit-config.yaml  README.md  boot.py  config.example.py  main.py  pyproject.toml
lib/: commands.py  sensor.py  wifi.py
typings/micropython_rp2_pico_w_stubs-1.20.0.post5.dist-info/: RECORD
