[project]
name = "alarm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "basedpyright>=1.36.2",
    "ruff>=0.14.10",
    "pre-commit>=3.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["lib/telegram.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
